--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "design-tool-landing-page",
+  "name": "linko",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.55.0",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.460.0",
