--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
+    "avvvatars-react": "^0.4.2",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.460.0",
